fixed issue with long peptide labels overflowing

--- a/frontend/jbio-app/src/pages/PeptideRetention.css
+++ b/frontend/jbio-app/src/pages/PeptideRetention.css
@@ -35,6 +35,9 @@
 .pr-label {
     color: "white" !important;
     margin: 0 !important;
+    max-width: 100px !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
 }
 
 .predict-button:disabled {
